--- a/Anexos/5_Desktop/SicacestAdmin/src/view/Login.form
+++ b/Anexos/5_Desktop/SicacestAdmin/src/view/Login.form
@@ -141,7 +141,7 @@
         <Component class="javax.swing.JTextField" name="txtUsuario">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Usuario"/>
+            <Property name="text" type="java.lang.String" value="bnovoa.linux@gmail.com"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
@@ -158,7 +158,7 @@
         <Component class="javax.swing.JPasswordField" name="txtPassword">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="programador"/>
+            <Property name="text" type="java.lang.String" value="1234567"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cmbSede">
