--- a/Anexos/Etapa3/2_Desktop/SicacestAdmin/src/view/Login.form
+++ b/Anexos/Etapa3/2_Desktop/SicacestAdmin/src/view/Login.form
@@ -130,7 +130,7 @@
         <Component class="javax.swing.JComboBox" name="cmbRectoria">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] {&quot;Seleccionar...&quot;})" type="code"/>
+              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] {&quot;Seleccione...&quot;})" type="code"/>
             </Property>
           </Properties>
           <Events>
@@ -167,7 +167,7 @@
         <Component class="javax.swing.JComboBox" name="cmbSede">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] {&quot;Seleccionar...&quot;})" type="code"/>
+              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] {&quot;Seleccione...&quot;})" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
