--- a/3_Desarrollo/1_Platform/2_Desktop/SicacestAdmin/src/view/Admin.form
+++ b/3_Desarrollo/1_Platform/2_Desktop/SicacestAdmin/src/view/Admin.form
@@ -1705,6 +1705,9 @@
                                 </Property>
                                 <Property name="text" type="java.lang.String" value="AGREGAR"/>
                               </Properties>
+                              <Events>
+                                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRespuestaSaveActionPerformed"/>
+                              </Events>
                             </Component>
                             <Component class="javax.swing.JLabel" name="lblEncuesta">
                               <Properties>
@@ -1764,7 +1767,7 @@
 
                               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                               <SubComponents>
-                                <Component class="javax.swing.JTable" name="jTable4">
+                                <Component class="javax.swing.JTable" name="tbPosiblesRespuestas">
                                   <Properties>
                                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                                       <Table columnCount="0" rowCount="0"/>
@@ -2132,8 +2135,7 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace pref="149" max="32767" attributes="0"/>
-                          <Component id="jScrollPane5" min="-2" max="-2" attributes="0"/>
+                          <Component id="jScrollPane5" pref="551" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPane17" min="-2" max="-2" attributes="0"/>
                       </Group>
