--- a/Code/Desktop/SicacestAdmin/src/view/Admin.form
+++ b/Code/Desktop/SicacestAdmin/src/view/Admin.form
@@ -38,7 +38,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Component id="pnl_Info" min="-2" pref="56" max="-2" attributes="0"/>
+              <Component id="pnl_Info" min="-2" pref="65" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="pnl_Principal" pref="662" max="32767" attributes="0"/>
           </Group>
@@ -60,6 +60,10 @@
           <Dimension value="[990, 46]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="pnl_InfoMouseDragged"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="pnl_InfoMousePressed"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -94,7 +98,7 @@
                           <Component id="txtRectoria" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="9" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
