Se implementa paneo al login

--- a/Code/Desktop/SicacestAdmin/src/view/Login.form
+++ b/Code/Desktop/SicacestAdmin/src/view/Login.form
@@ -245,6 +245,10 @@
           <Color blue="52" green="2c" red="12" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jPanel3MouseDragged"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel3MousePressed"/>
+      </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
       <SubComponents>
